--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,12 @@
 {
     "builds": [{
         "src": "NotesApp/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        "use": "@vercel/python@3.9", 
+        "config": {
+          "build": {
+            "legacyPool": true 
+          }
+      }
     }],
     "routes": [
         {
